Fix an issue where in some cases the rows get stretched out depending on the parent element's size

--- a/BlazorGrid/Content/BlazorGrid.scss
+++ b/BlazorGrid/Content/BlazorGrid.scss
@@ -6,6 +6,7 @@
 
     .grid-scrollview {
         display: grid;
+        align-content: start;
         background-color: inherit;
         grid-template-columns: repeat(auto);
 
